--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@material-ui/styles": "^3.0.0-alpha.8",
     "create-react-app": "^3.0.1",
     "firebase": "^5.8.2",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.13",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-materialize": "^2.6.0",
     "react-scripts": "2.1.3",
-    "react-swipeable-views": "^0.13.1"
+    "react-swipeable-views": "^0.13.1",
+    "remove": "^0.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
